--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="time-container">
             <div class="greeting-container">
                 <span>
-                    <img id="greeting-icon" src="./assets/desktop/icon-sun.svg" alt="Icon sun">
+                    <img id="greeting-icon" src="/assets/desktop/icon-sun.svg" alt="Icon sun">
                 </span>
 
-                <span class="text-preset-5">GOOD MORNING</span>
+                <span class="text-preset-5"></span>
             </div>
 
             <div class="time-display-container">
                 <span id="time" class="time text-preset-1"></span>
                 
-                <span id="zone-code" class="zone-code text-preset-3">BST</span>
+                <span id="zone-code" class="zone-code text-preset-3"></span>
             </div>
 
 
