fix: show greeting-text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img id="greeting-icon" src="/assets/desktop/icon-sun.svg" alt="Icon sun">
                 </span>
 
-                <span class="text-preset-5"></span>
+                <span id="greeting-text" class="text-preset-5"></span>
             </div>
 
             <div class="time-display-container">
